--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
 
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <!--Page Header-->
@@ -32,12 +32,12 @@
           src="./images/logo-black.svg"
           alt="логотип сайта оно тебе надо"
           class="header__logo-image"
-        >
+        />
       </a>
       <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
     </header>
 
@@ -129,23 +129,23 @@
           />
         </div>
         <h2 class="about__title">Об аукционе</h2>
-        <p class="about__text">
-          <span class="about__text-span">
+        <div class="about__text">
+          <p class="about__text-paragraph">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
-          </span>
-          <span class="about__text-span">
+          </p>
+          <p class="about__text-paragraph">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
             Когда-то они казались просто неудачными. Но, несмотря на критику,
             кажущуюся простоту или сложность,сейчас без этих лотов невозможно
             представить современную культуру. Когда в эти вещи не верил никто,
             продолжали верить их создатели. И сейчас эти лоты стали культовыми.
-          </span>
-        </p>
+          </p>
+        </div>
       </section>
     </main>
 
@@ -169,23 +169,28 @@
           </li>
         </ul>
       </nav>
-      <ul class="footer__social-list">
-        <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
-            <img src="./images/yt.svg" alt="круглый логотип Ютуб">
-          </a>
-        </li>
-        <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
-            <img src="./images/vk.svg" alt="круглый логотип Вконтакте">
-          </a>
-        </li>
-        <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
-            <img src="./images/pinterest.svg" alt="круглый логотип Пинтерест">
-          </a>
-        </li>
-      </ul>
+      <nav>
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a href="#0" class="footer__social-link">
+              <img src="./images/yt.svg" alt="круглый логотип Ютуб" />
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a href="#0" class="footer__social-link">
+              <img src="./images/vk.svg" alt="круглый логотип Вконтакте" />
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a href="#0" class="footer__social-link">
+              <img
+                src="./images/pinterest.svg"
+                alt="круглый логотип Пинтерест"
+              />
+            </a>
+          </li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
